@@ -22,6 +22,16 @@
    <caption>The main window showing the application in action</caption>
   </screenshot>
  </screenshots>
+ <keywords>
+  <keyword>Audio</keyword>
+  <keyword>MIDI</keyword>
+  <keyword>ALSA</keyword>
+  <keyword>JACK</keyword>
+  <keyword>Synthesizer</keyword>
+  <keyword>Sampler</keyword>
+  <keyword>LV2</keyword>
+  <keyword>Qt</keyword>
+ </keywords>
  <url type="homepage">http://drumkv1.sourceforge.net</url>
  <updatecontact>rncbc@rncbc.org</updatecontact>
  <project_group>rncbc.org</project_group>
