@@ -7,6 +7,7 @@ Comment[fr]=drumkv1 est un échantilloneur de batterie de la vieille école
 Exec=@ac_prefix@/bin/drumkv1_jack
 Icon=drumkv1
 Categories=Audio;AudioVideo;Midi;X-Alsa;X-Jack;Qt;
+Keywords=Audio;MIDI;ALSA;JACK;Synthesizer;Sampler;LV2;Qt;
 Terminal=false
 Type=Application
 X-SuSE-translate=true
